--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,6 +11,6 @@
     <h1><a href="/">Home</a></h1>
     <h1><a href="/signup">Signup</a></h1>
     <h1><a href="/about">About</a></h1>
-    <h1><a href="/signout">Signin</a></h1>
+    <h1><a href="/signout">Signout</a></h1>
 
 </nav>
