--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,9 @@
 
 <h2>Registered Users</h2>
 <hr>
+<form action="/search" method="post">
+    <input type="text" placeholder=" Search By Username" name="username">
+</form>
 
 <%Users.forEach(function(user){%>
     <h1><%=user.username%></h1>
